# clarityai_cc

./: README.md  pyproject.toml
clarityai_cc/: log_parser.py  main.py
tests/: test_log_parser.py
tests/test_input_data/: input-file-test-live.txt  input-file-test.txt
